<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVerticalStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVerticalEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


    <RadioGroup
        android:id="@+id/rgRepositoryType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@id/glVerticalStart"
        app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbRepositoryHandler"
            android:text="@string/handler_thread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbRepositoryCompletableFuture"
            android:text="@string/completable_future"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbRepositoryRxJava"
            android:text="@string/rxjava"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>