<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.chilik1020.hw8.views.edit.ContactEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glVerticalStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glVerticalEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/act_edit_toolbar_title"
            app:titleTextColor="@color/color_white_bg" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@={viewModel.contact.fullname}"
            android:hint="@string/act_edit_et_name"
            app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
            app:layout_constraintStart_toStartOf="@id/glVerticalStart"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/etContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@={viewModel.contact.contactInfo}"
            android:hint="@{viewModel.hintTextContactInfo}"
            android:textSize="@dimen/size_hint"
            app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
            app:layout_constraintStart_toStartOf="@id/glVerticalStart"
            app:layout_constraintTop_toBottomOf="@id/etName" />

        <Button
            android:id="@+id/btnRemoveContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_double_margin"
            android:background="@drawable/dr_btn_remove_bg"
            android:text="@string/act_edit_btn_remove"
            android:textColor="@color/color_white_bg"
            android:textSize="@dimen/size_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/glVerticalEnd"
            app:layout_constraintStart_toStartOf="@id/glVerticalStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>